
syntax = "proto3";

package library.v1;

option go_package = "library/v1";

message CreateBookRequest {
   string title = 1;
   string author = 2;
   int32 edition = 3;
   string isbn = 4;
}

message GetBookRequest {
    string id = 1;
}

message UpdateBookRequest {
    string id = 1;
    string title = 2;
    string author = 3;
    int32 edition = 4;
    string isbn = 5;
}

message DeleteBookRequest {
    string id = 1;
}

message ListBooksRequest {}

message ListBooksResponse {
    repeated Book books = 1;
}

message Book {
    string id = 1;
    string title = 2;
    string author = 3;
    int32 edition = 4;
    string isbn = 5;
}

